src/objects/FC_Renewal_Opportunity_Service_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MS_Products_to_Exclude__c</fullName>
        <inlineHelpText>A semicolon-delimited list of MS Product API values to exclude.</inlineHelpText>
        <label>MS Products to Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Types_to_Exclude__c</fullName>
        <inlineHelpText>A semicolon-delimited list of Purchase Type API values to exclude.</inlineHelpText>
        <label>Purchase Types to Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Types_to_Exclude__c</fullName>
        <inlineHelpText>A semicolon-delimited list of Sale Type API values to exclude.</inlineHelpText>
        <label>Sale Types to Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(FC) Renewal Opportunity Service Setting</label>
</CustomObject>